updated code pdf

--- a/hw1/code/linear_regression.ipynb
+++ b/hw1/code/linear_regression.ipynb
@@ -123,7 +123,7 @@
     "# GOAL: create a variable theta; theta is a numpy array whose elements are [a, b]\n",
     "\n",
     "\n",
-    "theta = np.dot(np.dot(np.linalg.inv(np.matmul(xhat,xhat.T)),xhat),y) # please modify this line\n",
+    "theta = np.dot(np.dot(np.linalg.inv(np.dot(xhat,xhat.T)),xhat),y) # please modify this line\n",
     "\n",
     "# ================== #\n",
     "# END YOUR CODE HERE #\n",
@@ -138,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd3c33c2e80>]"
+       "[<matplotlib.lines.Line2D at 0x7ff40b2da550>]"
       ]
      },
      "execution_count": 4,
@@ -222,7 +222,7 @@
     "    xhats.append(np.vstack([x**deg for deg in range(i, -1, -1)]))\n",
     "    \n",
     "for xhat in xhats:\n",
-    "    thetas.append(np.dot(np.dot(np.linalg.inv(np.matmul(xhat,xhat.T)),xhat),y))\n",
+    "    thetas.append(np.dot(np.dot(np.linalg.inv(np.dot(xhat,xhat.T)),xhat),y))\n",
     "    \n",
     "# GOAL: create a variable thetas.\n",
     "# thetas is a list, where theta[i] are the model parameters for the polynomial fit of order i+1.\n",
@@ -509,9 +509,9 @@
    "source": [
     "### ANSWERS\n",
     "\n",
-    "(1) You fill this out.\n",
+    "(1) Order 3 Polynomial\n",
     "\n",
-    "(2) You fill this out."
+    "(2) Order 5 polynomial overfits the data because the data is generated from an order 3 polynomial equation"
    ]
   },
   {
