implemented softmax loss vectorized

--- a/hw2/softmax.ipynb
+++ b/hw2/softmax.ipynb
@@ -17,9 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import numpy as np\n",
@@ -33,11 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data shape:  (49000, 3073)\n",
+      "Train labels shape:  (49000,)\n",
+      "Validation data shape:  (1000, 3073)\n",
+      "Validation labels shape:  (1000,)\n",
+      "Test data shape:  (1000, 3073)\n",
+      "Test labels shape:  (1000,)\n",
+      "dev data shape:  (500, 3073)\n",
+      "dev labels shape:  (500,)\n"
+     ]
+    }
+   ],
    "source": [
     "def get_CIFAR10_data(num_training=49000, num_validation=1000, num_test=1000, num_dev=500):\n",
     "    \"\"\"\n",
@@ -46,7 +70,7 @@
     "    SVM, but condensed to a single function.  \n",
     "    \"\"\"\n",
     "    # Load the raw CIFAR-10 data\n",
-    "    cifar10_dir = '/your/path/to/cifar-10-batches-py' # You need to update this line\n",
+    "    cifar10_dir = '../cifar-10-batches-py' # You need to update this line\n",
     "    X_train, y_train, X_test, y_test = load_CIFAR10(cifar10_dir)\n",
     "    \n",
     "    # subsample the data\n",
@@ -108,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,9 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3277607028048757\n"
+     ]
+    }
+   ],
    "source": [
     "print(loss)"
    ]
@@ -188,11 +220,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 3073)\n",
+      "numerical: 0.725202 analytic: 0.797527, relative error: 4.749692e-02\n",
+      "numerical: 5.059436 analytic: 4.718331, relative error: 3.488579e-02\n",
+      "numerical: 6.138639 analytic: 4.846450, relative error: 1.176312e-01\n",
+      "numerical: -0.876883 analytic: -0.267610, relative error: 5.323515e-01\n",
+      "numerical: -1.113214 analytic: -0.756359, relative error: 1.908751e-01\n",
+      "numerical: -3.752956 analytic: -3.251194, relative error: 7.163776e-02\n",
+      "numerical: 2.589160 analytic: 3.636105, relative error: 1.681767e-01\n",
+      "numerical: -0.206252 analytic: -0.000247, relative error: 9.976103e-01\n",
+      "numerical: -2.191583 analytic: -0.586443, relative error: 5.777989e-01\n",
+      "numerical: 1.430055 analytic: 1.176812, relative error: 9.714471e-02\n"
+     ]
+    }
+   ],
    "source": [
     "## Calculate the gradient of the softmax loss in the Softmax class.\n",
     "# For convenience, we'll write one function that computes the loss\n",
@@ -384,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
