--- a/hw2/softmax.ipynb
+++ b/hw2/softmax.ipynb
@@ -220,16 +220,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: 0.418177 analytic: 0.418177, relative error: 7.751670e-09\n",
-      "numerical: 1.542933 analytic: 1.542933, relative error: 1.138657e-08\n",
-      "numerical: 0.482476 analytic: 0.482476, relative error: 9.820100e-09\n",
-      "numerical: 1.526709 analytic: 1.526709, relative error: 5.955818e-09\n",
-      "numerical: 0.984634 analytic: 0.984634, relative error: 3.365779e-08\n",
-      "numerical: 0.903900 analytic: 0.903900, relative error: 3.800015e-08\n",
-      "numerical: -0.840134 analytic: -0.840134, relative error: 3.454084e-08\n",
-      "numerical: -0.704851 analytic: -0.704851, relative error: 3.135250e-08\n",
-      "numerical: -1.010802 analytic: -1.010802, relative error: 2.609360e-08\n",
-      "numerical: -2.479461 analytic: -2.479461, relative error: 3.098441e-09\n"
+      "numerical: -0.612598 analytic: -0.612598, relative error: 4.137670e-08\n",
+      "numerical: -1.584856 analytic: -1.584856, relative error: 2.618222e-08\n",
+      "numerical: 1.676084 analytic: 1.676084, relative error: 8.371557e-09\n",
+      "numerical: -0.604752 analytic: -0.604752, relative error: 8.267885e-09\n",
+      "numerical: 0.519354 analytic: 0.519354, relative error: 1.013007e-07\n",
+      "numerical: 1.687832 analytic: 1.687832, relative error: 1.413468e-08\n",
+      "numerical: 0.011662 analytic: 0.011662, relative error: 6.519324e-06\n",
+      "numerical: -0.717487 analytic: -0.717487, relative error: 3.589987e-08\n",
+      "numerical: 0.853008 analytic: 0.853008, relative error: 2.914372e-08\n",
+      "numerical: -3.269740 analytic: -3.269740, relative error: 1.575093e-08\n"
      ]
     }
    ],
@@ -274,9 +274,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Normal loss / grad_norm: 2.314301853498416 / 329.93416213260025 computed in 0.08051204681396484s\n",
-      "Vectorized loss / grad: 2.3143018534984168 / 329.93416213260025 computed in 0.004102230072021484s\n",
-      "difference in loss / grad: -8.881784197001252e-16 /2.179762434468529e-13 \n"
+      "Normal loss / grad_norm: 2.332024438035439 / 319.642433484745 computed in 0.07346010208129883s\n",
+      "Vectorized loss / grad: 2.3320244380354382 / 319.64243348474497 computed in 0.004005908966064453s\n",
+      "difference in loss / grad: 8.881784197001252e-16 /2.094153511707287e-13 \n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
       "iteration 1200 / 1500: loss 1.8411450268664082\n",
       "iteration 1300 / 1500: loss 1.79104024957921\n",
       "iteration 1400 / 1500: loss 1.8705803029382257\n",
-      "That took 4.577474117279053s\n"
+      "That took 4.268126964569092s\n"
      ]
     },
     {
@@ -430,7 +430,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -449,11 +451,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Learning Rate: 1e-06\n",
+      "Validation Set Error:0.593\n",
+      "Test Set Error:  0.603\n"
+     ]
+    }
+   ],
    "source": [
     "# ================================================================ #\n",
     "# YOUR CODE HERE:\n",
@@ -474,12 +486,12 @@
     "    y_val_pred = softmax.predict(X_val)\n",
     "    acc = (rate,np.mean(np.equal(y_val, y_val_pred)))\n",
     "    max_accuracy = max(max_accuracy, acc, key=lambda x: x[1])\n",
-    "print(f\"Best Learning Rate: {max_accuracy[0]}\\nValidation Set Accuracy:{max_accuracy[1]}\")\n",
+    "print(f\"Best Learning Rate: {max_accuracy[0]}\\nValidation Set Error:{1-max_accuracy[1]}\")\n",
     "softmax.train(X_train, y_train, learning_rate=max_accuracy[0],\n",
     "                      num_iters=1500, verbose=False)\n",
     "y_test_pred = softmax.predict(X_test)\n",
     "acc = np.mean(np.equal(y_test, y_test_pred))\n",
-    "print(\"Test Set Accuracy: \", acc)\n",
+    "print(\"Test Set Error: \", 1-acc)\n",
     "# ================================================================ #\n",
     "# END YOUR CODE HERE\n",
     "# ================================================================ #\n"
