added hw3 starter code

--- a/hw2/softmax.ipynb
+++ b/hw2/softmax.ipynb
@@ -220,16 +220,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: -0.612598 analytic: -0.612598, relative error: 4.137670e-08\n",
-      "numerical: -1.584856 analytic: -1.584856, relative error: 2.618222e-08\n",
-      "numerical: 1.676084 analytic: 1.676084, relative error: 8.371557e-09\n",
-      "numerical: -0.604752 analytic: -0.604752, relative error: 8.267885e-09\n",
-      "numerical: 0.519354 analytic: 0.519354, relative error: 1.013007e-07\n",
-      "numerical: 1.687832 analytic: 1.687832, relative error: 1.413468e-08\n",
-      "numerical: 0.011662 analytic: 0.011662, relative error: 6.519324e-06\n",
-      "numerical: -0.717487 analytic: -0.717487, relative error: 3.589987e-08\n",
-      "numerical: 0.853008 analytic: 0.853008, relative error: 2.914372e-08\n",
-      "numerical: -3.269740 analytic: -3.269740, relative error: 1.575093e-08\n"
+      "numerical: 0.301892 analytic: 0.301892, relative error: 4.713473e-09\n",
+      "numerical: 0.412108 analytic: 0.412108, relative error: 1.306684e-07\n",
+      "numerical: -2.543329 analytic: -2.543329, relative error: 4.141162e-09\n",
+      "numerical: 1.474428 analytic: 1.474427, relative error: 2.611153e-08\n",
+      "numerical: 0.807006 analytic: 0.807006, relative error: 6.768935e-08\n",
+      "numerical: 2.075951 analytic: 2.075951, relative error: 2.178458e-08\n",
+      "numerical: 0.856041 analytic: 0.856040, relative error: 6.441477e-08\n",
+      "numerical: -1.398324 analytic: -1.398324, relative error: 1.355805e-08\n",
+      "numerical: -0.306065 analytic: -0.306065, relative error: 2.836512e-09\n",
+      "numerical: -4.762989 analytic: -4.762989, relative error: 1.079254e-08\n"
      ]
     }
    ],
@@ -274,9 +274,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Normal loss / grad_norm: 2.332024438035439 / 319.642433484745 computed in 0.07346010208129883s\n",
-      "Vectorized loss / grad: 2.3320244380354382 / 319.64243348474497 computed in 0.004005908966064453s\n",
-      "difference in loss / grad: 8.881784197001252e-16 /2.094153511707287e-13 \n"
+      "Normal loss / grad_norm: 2.3410310932467624 / 356.1972823983476 computed in 0.08643984794616699s\n",
+      "Vectorized loss / grad: 2.3410310932467615 / 356.1972823983477 computed in 0.005819797515869141s\n",
+      "difference in loss / grad: 8.881784197001252e-16 /2.2939937255122995e-13 \n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
       "iteration 1200 / 1500: loss 1.8411450268664082\n",
       "iteration 1300 / 1500: loss 1.79104024957921\n",
       "iteration 1400 / 1500: loss 1.8705803029382257\n",
-      "That took 4.268126964569092s\n"
+      "That took 5.022393703460693s\n"
      ]
     },
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -461,8 +461,9 @@
      "output_type": "stream",
      "text": [
       "Best Learning Rate: 1e-06\n",
-      "Validation Set Error:0.593\n",
-      "Test Set Error:  0.603\n"
+      "Validation Set Accuracy:0.405\n",
+      "Validation Set Error:0.595\n",
+      "Test Set Error:  0.608\n"
      ]
     }
    ],
@@ -486,7 +487,7 @@
     "    y_val_pred = softmax.predict(X_val)\n",
     "    acc = (rate,np.mean(np.equal(y_val, y_val_pred)))\n",
     "    max_accuracy = max(max_accuracy, acc, key=lambda x: x[1])\n",
-    "print(f\"Best Learning Rate: {max_accuracy[0]}\\nValidation Set Error:{1-max_accuracy[1]}\")\n",
+    "print(f\"Best Learning Rate: {max_accuracy[0]}\\nValidation Set Accuracy:{max_accuracy[1]}\\nValidation Set Error:{1-max_accuracy[1]}\")\n",
     "softmax.train(X_train, y_train, learning_rate=max_accuracy[0],\n",
     "                      num_iters=1500, verbose=False)\n",
     "y_test_pred = softmax.predict(X_test)\n",
