--- a/hw3/FC_nets.ipynb
+++ b/hw3/FC_nets.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
     "from cs231n.solver import Solver\n",
     "\n",
     "import os\n",
-    "alias kk os._exit(0)\n",
+    "%alias kk os._exit(0)\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots\n",
@@ -93,9 +93,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train: (49000, 3, 32, 32) \n",
+      "y_train: (49000,) \n",
+      "X_val: (1000, 3, 32, 32) \n",
+      "y_val: (1000,) \n",
+      "X_test: (1000, 3, 32, 32) \n",
+      "y_test: (1000,) \n"
+     ]
+    }
+   ],
    "source": [
     "# Load the (preprocessed) CIFAR10 data.\n",
     "\n",
@@ -128,9 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_forward function:\n",
+      "difference: 9.769849468192957e-10\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the affine_forward function\n",
     "\n",
@@ -165,9 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_backward function:\n",
+      "dx error: 7.598406468756369e-11\n",
+      "dw error: 5.7457383647397536e-11\n",
+      "db error: 1.3332437594154664e-11\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the affine_backward function\n",
     "\n",
@@ -210,9 +243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing relu_forward function:\n",
+      "difference: 4.999999798022158e-08\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the relu_forward function\n",
     "\n",
@@ -238,9 +280,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing relu_backward function:\n",
+      "dx error: 3.2756037806455336e-12\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.random.randn(10, 10)\n",
     "dout = np.random.randn(*x.shape)\n",
@@ -274,9 +325,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_relu_forward and affine_relu_backward:\n",
+      "dx error: 4.19733777413245e-11\n",
+      "dw error: 1.0825783318272902e-10\n",
+      "db error: 7.826682563679055e-12\n"
+     ]
+    }
+   ],
    "source": [
     "from nndl.layer_utils import affine_relu_forward, affine_relu_backward\n",
     "\n",
@@ -309,9 +371,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing svm_loss:\n",
+      "loss: 9.00074739665796\n",
+      "dx error: 1.4021566006651672e-09\n",
+      "\n",
+      "Testing softmax_loss:\n",
+      "loss: 2.3026602945555674\n",
+      "dx error: 8.467349255286659e-09\n"
+     ]
+    }
+   ],
    "source": [
     "num_classes, num_inputs = 10, 50\n",
     "x = 0.001 * np.random.randn(num_inputs, num_classes)\n",
@@ -345,9 +421,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing initialization ... \n",
+      "Testing test-time forward pass ... \n",
+      "Testing training loss (no regularization)\n",
+      "Running numeric gradient check with reg = 0.0\n",
+      "W1 relative error: 1.8336562786695002e-08\n",
+      "W2 relative error: 3.201560569143183e-10\n",
+      "b1 relative error: 9.828315204644842e-09\n",
+      "b2 relative error: 4.329134954569865e-10\n",
+      "Running numeric gradient check with reg = 0.7\n",
+      "W1 relative error: 2.5279152310200606e-07\n",
+      "W2 relative error: 7.976652806155026e-08\n",
+      "b1 relative error: 1.564679947504764e-08\n",
+      "b2 relative error: 9.089617896905665e-10\n"
+     ]
+    }
+   ],
    "source": [
     "N, D, H, C = 3, 5, 50, 7\n",
     "X = np.random.randn(N, D)\n",
@@ -430,8 +526,9 @@
     "#   since you did it in the previous notebook.\n",
     "#\n",
     "# ================================================================ #\n",
-    "\n",
-    "pass\n",
+    "model = TwoLayerNet(hidden_dims=200)\n",
+    "solver = Solver(model, data, lr_decay=0.9, optim_config={\"learning_rate\": 1e-3}, verbose=False)\n",
+    "solver.train()\n",
     "\n",
     "# ================================================================ #\n",
     "# END YOUR CODE HERE\n",
@@ -520,7 +617,7 @@
     "# Play around with the weight_scale and learning_rate so that you can overfit a small dataset.\n",
     "# Your training accuracy should be 1.0 to receive full credit on this part.\n",
     "weight_scale = 1e-2\n",
-    "learning_rate = 1e-4\n",
+    "learning_rate = 1e-2\n",
     "\n",
     "model = FullyConnectedNet([100, 100],\n",
     "              weight_scale=weight_scale, dtype=np.float64)\n",
@@ -571,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
