--- a/hw4/Optimization.ipynb
+++ b/hw4/Optimization.ipynb
@@ -13,11 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (layers.py, line 201)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/Users/tanishambulkar/opt/miniconda3/envs/deeplearning/lib/python3.8/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3417\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \u001b[1;32m\"<ipython-input-1-153b7ba7d806>\"\u001b[0m, line \u001b[1;32m6\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    from nndl.fc_net import *\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/Users/tanishambulkar/projects/ECE_C147/hw4/nndl/fc_net.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from .layers import *\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/Users/tanishambulkar/projects/ECE_C147/hw4/nndl/layers.py\"\u001b[0;36m, line \u001b[0;32m201\u001b[0m\n\u001b[0;31m    elif mode == 'test':\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "## Import and setups\n",
     "\n",
@@ -473,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
