--- a/hw4/Batch-Normalization.ipynb
+++ b/hw4/Batch-Normalization.ipynb
@@ -625,8 +625,7 @@
    "metadata": {},
    "source": [
     "## Answer:\n",
-    "From the figures above, on the one hand, batchnorm can achieve more accurate results. We can find that when weight initialization scale is smaller than 10^(-1), the accuracies of model with batchnorm are almost larger than those of model without batchnorm. And the loss of model with batchnorm are almost smaller than those of model without batchnorm. While when weight initialization scale is larger than 10^(-1), the model with batchnorm has poorer performance than model without batchnorm. On the other hand, we find that the model with batchnorm is much less sensitive to the weight initialization scale. The orange curves have wider stable ranges than blue curves.\n",
-    "As we know, batchnorm can be used as a regularizer to make results more stable. Thus, the model with batchnorm should be less affected by weight initialization scale. And the results we observed meet this theory and make sense."
+    "In the first two figures, there are spikes between 10e-1 and 10e-2 where the acccuracy is the highest for that specific weight initialization value. If weights are initialized too large or too small, they negatively impact performance. Additionally, regardless of weight initialization, batch norm seems to help improve accuracy in almost every case. Batchnorm provides some regularization and ensure normalization at each layer so results are consistent accross the entire neural network."
    ]
   },
   {
