finished conv layers notebook

--- a/hw5/CNN-Layers.ipynb
+++ b/hw5/CNN-Layers.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,9 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing conv_forward_naive\n",
+      "difference:  2.2121476417505994e-08\n"
+     ]
+    }
+   ],
    "source": [
     "x_shape = (2, 3, 4, 4)\n",
     "w_shape = (3, 3, 4, 4)\n",
@@ -88,7 +97,6 @@
     "                           [ 0.59480972,  0.56776003]],\n",
     "                          [[ 2.36270298,  2.36904306],\n",
     "                           [ 2.38090835,  2.38247847]]]])\n",
-    "\n",
     "# Compare your output to ours; difference should be around 1e-8\n",
     "print('Testing conv_forward_naive')\n",
     "print('difference: ', rel_error(out, correct_out))"
@@ -107,9 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing conv_backward_naive function\n",
+      "dx error:  1.366859820551726e-09\n",
+      "dw error:  2.783082080067301e-10\n",
+      "db error:  1.3164225673775657e-11\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.random.randn(4, 3, 5, 5)\n",
     "w = np.random.randn(2, 3, 3, 3)\n",
@@ -146,9 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing max_pool_forward_naive function:\n",
+      "difference:  4.1666665157267834e-08\n"
+     ]
+    }
+   ],
    "source": [
     "x_shape = (2, 3, 4, 4)\n",
     "x = np.linspace(-0.3, 0.4, num=np.prod(x_shape)).reshape(x_shape)\n",
@@ -168,7 +196,6 @@
     "                          [ 0.26736842,  0.28210526]],\n",
     "                         [[ 0.32631579,  0.34105263],\n",
     "                          [ 0.38526316,  0.4       ]]]])\n",
-    "\n",
     "# Compare your output with ours. Difference should be around 1e-8.\n",
     "print('Testing max_pool_forward_naive function:')\n",
     "print('difference: ', rel_error(out, correct_out))"
@@ -187,9 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing max_pool_backward_naive function:\n",
+      "dx error:  3.275624396386197e-12\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.random.randn(3, 2, 8, 8)\n",
     "dout = np.random.randn(3, 2, 4, 4)\n",
@@ -228,9 +264,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing conv_forward_fast:\n",
+      "Naive: 5.433432s\n",
+      "Fast: 0.009385s\n",
+      "Speedup: 578.927067x\n",
+      "Difference:  8.036182519306021e-11\n",
+      "\n",
+      "Testing conv_backward_fast:\n",
+      "Naive: 7.733207s\n",
+      "Fast: 0.010346s\n",
+      "Speedup: 747.463267x\n",
+      "dx difference:  5.59985298544592e-12\n",
+      "dw difference:  3.4383578474379873e-13\n",
+      "db difference:  0.0\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.fast_layers import conv_forward_fast, conv_backward_fast\n",
     "from time import time\n",
@@ -270,9 +326,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing pool_forward_fast:\n",
+      "Naive: 0.399669s\n",
+      "fast: 0.002412s\n",
+      "speedup: 165.694672x\n",
+      "difference:  0.0\n",
+      "\n",
+      "Testing pool_backward_fast:\n",
+      "Naive: 0.570978s\n",
+      "speedup: 55.275262x\n",
+      "dx difference:  0.0\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.fast_layers import max_pool_forward_fast, max_pool_backward_fast\n",
     "\n",
@@ -321,9 +394,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing conv_relu_pool\n",
+      "dx error:  7.23561848128953e-09\n",
+      "dw error:  2.2246344949353818e-09\n",
+      "db error:  5.056123476114607e-11\n"
+     ]
+    }
+   ],
    "source": [
     "from nndl.conv_layer_utils import conv_relu_pool_forward, conv_relu_pool_backward\n",
     "\n",
@@ -349,9 +433,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing conv_relu:\n",
+      "dx error:  2.0561215176446717e-09\n",
+      "dw error:  8.162001057204171e-10\n",
+      "db error:  6.808266080680872e-12\n"
+     ]
+    }
+   ],
    "source": [
     "from nndl.conv_layer_utils import conv_relu_forward, conv_relu_backward\n",
     "\n",
@@ -400,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
