implemented 3 layer cnn

--- a/hw5/CNN-BatchNorm.ipynb
+++ b/hw5/CNN-BatchNorm.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +68,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before spatial batch normalization:\n",
+      "  Shape:  (2, 3, 4, 5)\n",
+      "  Means:  [ 8.10916    10.38816015 10.52405417]\n",
+      "  Stds:  [4.20656815 4.50047185 4.29562312]\n",
+      "After spatial batch normalization:\n",
+      "  Shape:  (2, 3, 4, 5)\n",
+      "  Means:  [-0.35790471  0.16270847  0.19519623]\n",
+      "  Stds:  [0.95113746 0.99783702 0.95235807]\n",
+      "After spatial batch normalization (nontrivial gamma, beta):\n",
+      "  Shape:  (2, 3, 4, 5)\n",
+      "  Means:  [5.39374285 7.67810537 7.92815178]\n",
+      "  Stds:  [3.78506334 4.18366807 4.03346447]\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the training-time forward pass by checking means and variances\n",
     "# of features both before and after spatial batch normalization\n",
@@ -112,9 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx error:  2.7990987144348948e-08\n",
+      "dgamma error:  1.2764557559882658e-11\n",
+      "dbeta error:  5.523504969109281e-12\n"
+     ]
+    }
+   ],
    "source": [
     "N, C, H, W = 2, 3, 4, 5\n",
     "x = 5 * np.random.randn(N, C, H, W) + 12\n",
@@ -137,6 +166,13 @@
     "print('dgamma error: ', rel_error(da_num, dgamma))\n",
     "print('dbeta error: ', rel_error(db_num, dbeta))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -155,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
